prod-install/overlays/cert-manager-nginx/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: trow-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - host: myregistry.mydomain.io
      http:
        paths:
          - path: /
            backend:
              serviceName: trow-svc
              servicePort: 8000
  tls: 
    - hosts:
        - myregistry.mydomain.io
      secretName: trow-registry-tls
