prod-install/overlays/cert-manager-nginx/trow-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: trow-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  backend:
    serviceName: trow-svc
    servicePort: 443
